--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,41 +3,62 @@
 <title>W3.CSS</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
 <body>
 
-<div class="w3-container">
-  <h2>Buscador restaurantes</h2>
-  
-  <div class="w3-card-4">
-    <div class="w3-container w3-brown">
-      <h2>Formulario de búsqueda</h2>
+  <div class="w3-container">
+    <h2>Buscador restaurantes</h2>
+
+    <div class="w3-card-4">
+      <div class="w3-container w3-brown">
+        <h2>Formulario de búsqueda</h2>
+      </div>
+      <form class="w3-container" action="/">
+        <p>
+          <label class="w3-text-brown"><b>Identificador de restaurante</b></label>
+          <input class="w3-input w3-border w3-sand" name="restaurant_id" type="text">
+        </p>
+        <p>
+        <p>
+          <label class="w3-text-brown"><b>Vecindario</b></label>
+          <select class="w3-select" name="borough">
+            <option value="" disabled selected>Selecciona un barrio</option>
+            <option value="Queens">Queens</option>
+            <option value="Manhatan">Manhatan</option>
+            <option value="Bronx">Bronx</option>
+          </select>
+        </p>
+        <button class="w3-btn w3-brown">Buscar</button>
+        <a href="/"><button class="w3-btn w3-brown">Limpiar filtros</button></a>
+      </p>
+      </form>
     </div>
-    <form class="w3-container" action="/">
-      <p>      
-      <label class="w3-text-brown"><b>Identificador de restaurante</b></label>
-      <input class="w3-input w3-border w3-sand" name="restaurant_id" type="text"></p>
-      <p>      
-      <button class="w3-btn w3-brown">Buscar</button></p>
-    </form>
+    <div class="w3-container">
+      <% restaurants.forEach(function(restaurant) { %>
+
+        <div class="w3-card-4 w3-panel w3-half">
+          <header class="w3-container w3-brown">
+            <h1>
+              <%= restaurant.name %>
+            </h1>
+          </header>
+
+          <div class="w3-container">
+            <p>
+              <%= restaurant.cuisine %>
+            </p>
+          </div>
+          <footer class="w3-container w3-brown">
+            <h5>Indetificador del restaurante: <strong>
+                <%= restaurant.restaurant_id %>
+              </strong></h5>
+          </footer>
+        </div>
+
+        <% }) %>
+    </div>
   </div>
 
-  <% restaurants.forEach(function(restaurant) { %> 
-
-    <div class="w3-card-4" style="width:50%;">
-      <header class="w3-container w3-brown">
-        <h1><%= restaurant.name %></h1>
-      </header>
-  
-      <div class="w3-container">
-        <p><%= restaurant.cuisine %> </p>
-      </div>
-      <footer class="w3-container w3-brown">
-        <h5>Indetificador del restaurante: <strong><%= restaurant.restaurant_id %> </strong></h5>
-      </footer>
-    </div>
-
-    <% }) %> 
-</div>
-
 </body>
+
 </html>
