--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,39 +3,69 @@
 <title>W3.CSS</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
 <body>
 
-<div class="w3-container">
-  <h2>Buscador restaurantes</h2>
-  
-  <div class="w3-card-4">
-    <div class="w3-container w3-brown">
-      <h2>Formulario de búsqueda</h2>
+  <div class="w3-container">
+    <h2>Buscador restaurantes</h2>
+
+
+    <div class="w3-card-4">
+      <div class="w3-container w3-brown">
+        <h2>Formulario de búsqueda</h2>
+      </div>
+      <form class="w3-container" action="/search">
+        <p>
+          <label class="w3-text-brown"><b>Identificador de restaurante</b></label>
+          <input class="w3-input w3-border w3-sand" name="restaurant_id" type="text">
+        </p>
+        <!-- buscar por barrio -->
+        <p>
+          <label class="w3-text-brown"><b>Barrio</b></label>
+          <select class="w3-select" name="borough">
+            <option value="" disabled selected>Selecciona barrio</option>
+            <option value="Queens">Barrio de Queens</option>
+            <option value="Bronx">Barrio del Bronx</option>
+            <option value="Brooklyn">Barrio de Brooklyn</option>
+            <option value="Manhattan">Barrio de Manhattan</option>
+            <option value="Staten Island">Barrio de Staten Island</option>
+          </select>
+        </p>
+        <p>
+          <button class="w3-btn w3-brown">Buscar</button>
+        </p>
+      </form>
     </div>
-    <form class="w3-container" action="/">
-      <p>      
-      <label class="w3-text-brown"><b>Identificador de restaurante</b></label>
-      <input class="w3-input w3-border w3-sand" name="restaurant_id" type="text"></p>
-      <p>      
-      <button class="w3-btn w3-brown">Buscar</button></p>
-    </form>
+
+    <!-- Generar tantas w3-card-4 como objetos hay en el array documents https://oscarm.tinytake.com/msc/NzA3NjkxMl8xOTgxODIwMw -->
+
+    <% documents.forEach(r=> {%>
+
+      <div class="w3-card-4 w3-margin-top" style="width:50%;">
+        <header class="w3-container w3-brown">
+          <h1>
+            <%= r.name %>
+          </h1>
+        </header>
+
+        <div class="w3-container">
+          <p>
+            <%= r.borough %>
+          </p>
+          <p>
+            <%= r.cuisine %>
+          </p>
+        </div>
+
+        <footer class="w3-container w3-brown">
+          <h5>Indetificador del restaurante: <strong>
+              <%= r.restaurant_id %>
+            </strong></h5>
+        </footer>
+      </div>
+      <% }) %>
   </div>
 
-  
-    <div class="w3-card-4" style="width:50%;">
-      <header class="w3-container w3-brown">
-        <h1>Nombre restaurante</h1>
-      </header>
-  
-      <div class="w3-container">
-        <p>Poner aqui todos los datos relevantes del restaurantes a medida que se realicen las consultas</p>
-      </div>
-  
-      <footer class="w3-container w3-brown">
-        <h5>Indetificador del restaurante: <strong>123456</strong></h5>
-      </footer>
-    </div>
-</div>
-
 </body>
+
 </html>
